test/syntax-errors/liste_cas1.sos
# liste_cas absence de la ) apres le filtre

case 1 in 
	* id = 1 ;; 
esac